--- a/ThisWorkbook-sjis.cls
+++ b/ThisWorkbook-sjis.cls
@@ -12,7 +12,7 @@ Option Explicit
 'ライブラリリストの設定 (設置フォルダはワークブックと同じディレクトリ)
 Const FILENAME_LIBLIST As String = "libdef.txt" 'ライブラリリストのファイル名
 Const FILENAME_EXPORT As String = "ThisWorkbook-sjis.cls" 'エクスポート clsファイル名
-Const EXPORT_FOLDER As String = "export"
+Const EXPORT_FOLDER As String = "src"
 
 '標準モジュール
 Const vbext_ct_StdModule As Integer = 1
@@ -390,6 +390,7 @@ End Function
 '-------------------------------------------------------------
 Public Sub ExportAll()
     Dim export_path As String
+    Dim full_path As String
     Dim vb_component As Object
     
     export_path = EXPORT_FOLDER
@@ -415,7 +416,10 @@ Public Sub ExportAll()
              extention = ".cls"
         End Select
         
-        vb_component.Export ThisWorkbook.Path & "\\" & export_path & "\\" & vb_component.Name & extention
+        ' エクスポート
+        full_path = ThisWorkbook.Path & "\\" & export_path & "\\" & vb_component.Name & extention
+        Debug.Print "Export to " & full_path
+        vb_component.Export full_path
     Next
 End Sub
 
@@ -424,8 +428,7 @@ End Sub
 ' Func: テスト実行
 '-------------------------------------------------------------------------------
 Public Sub RunAllTests()
-  Dim Calc_spec
-  Set Calc_spec = New Calc_spec
-  Calc_spec.Specs
-  Set Calc_spec = Nothing
+  Dim Runner As New TestRunner
+  Runner.Run
+  Set Runner = Nothing
 End Sub
