--- a/src/Calc_spec.cls
+++ b/src/Calc_spec.cls
@@ -15,14 +15,14 @@ Sub Specs()
         On Error Resume Next
         Dim Specs As New SpecSuite
 
-        Dim subject As New Calc
+        Dim Subject As New Calc
 
         ' Describe the desired behavior
         With Specs.It("should add two numbers")
                 ' Test the desired behavior
-                .Expect(subject.Add(2, 2)).ToEqual 4
-                .Expect(subject.Add(3, -1)).ToEqual 2
-                .Expect(subject.Add(-1, -2)).ToEqual -3
+                .Expect(Subject.Add(2, 2)).ToEqual 4
+                .Expect(Subject.Add(3, -1)).ToEqual 2
+                .Expect(Subject.Add(-1, -2)).ToEqual -3
         End With
 
         ' Run the specs inline (in the Immediate window)
