--- a/src/ThisWorkbook.cls
+++ b/src/ThisWorkbook.cls
@@ -11,7 +11,6 @@ Attribute VB_Exposed = True
 ' Name: ThisWorkBook
 '-------------------------------------------------------------------------------
 Option Explicit
-Const EXPORT_FOLDER As String = "src"
 Const FILEMANAGER_PATH As String = "src\FileManager.bas"
 
 '-------------------------------------------------------------------------------
@@ -33,18 +32,40 @@ End Sub
 ' Func: Import FileManager.bas
 '-------------------------------------------------------------------------------
 Public Sub importFileManager()
-  ThisWorkbook.VBProject.VBComponents.Remove _
-    ThisWorkbook.VBProject.VBComponents("FileManager")
+  If ModExists("FileManager") Then
+    ThisWorkbook.VBProject.VBComponents.Remove _
+      ThisWorkbook.VBProject.VBComponents("FileManager")
+  End If
     
   Debug.Print "Import from " & getAbsoluteFileManagerPath
   ThisWorkbook.VBProject.VBComponents.Import getAbsoluteFileManagerPath
 End Sub
 
+' Check if Module Exist
+' http://forums.arcgis.com/threads/5601-How-to-check-if-a-module-exist
+Function ModExists(name As String) As Boolean
+
+  ModExists = False
+  Dim pVBE As VBIDE.VBE
+  Set pVBE = Application.VBE
+  Dim l As Long
+  For l = 1 To pVBE.VBProjects.count
+    Dim k As Long
+    For k = 1 To pVBE.VBProjects(l).VBComponents.count
+      If pVBE.VBProjects(l).VBComponents(k).Type = vbext_ct_StdModule Then
+        Dim s As String
+        s = UCase(pVBE.VBProjects.Item(l).VBComponents(k).name)
+        If s = UCase(name) Then
+          ModExists = True
+          Exit Function
+        End If
+      End If
+    Next k
+  Next l
+End Function
+
 Private Function getAbsoluteFileManagerPath() As String
   getAbsoluteFileManagerPath = ThisWorkbook.Path & "\" & FILEMANAGER_PATH
 End Function
-
-
-
 
 
