--- a/README.org
+++ b/README.org
@@ -1,15 +1,3 @@
-* Excel VBA 用 開発環境
-** 機能
-** 外部ライブラリ
-ツールバーから 参照設定を選択肢、以下を追加
-- Microsoft Visual Basic for Application Extention
+* ExcelVBA統合開発環境
 
-ほか、以下のツールを利用。
-
-- Excel-TDD ・・・ VBA用テスティングフレームワーク
-
-** Submodules
-
-** 動作確認
-- Windows 7 64bit
-- Excel 2010
+See: http://futurismo.biz/archives/2382
